--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
 devpi_deploy.sh
 tests/
 .venv/
+dist/
+*.egg-info/
+*.egg
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.log
+*.sqlite3
+*.db
+*.DS_Store
+*.swp
+*.swo
