--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,14 +4,15 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pyaws_s3"
-version = "1.0.0"
+version = "1.0.2"
 description = "A Python package for AWS S3 utilities"
 authors = [
     { name="Giuseppe Zileni", email="giuseppe.zileni@gmail.com" }
 ]
 readme = {file = "README.md", content-type = "text/markdown"}
 requires-python = ">=3.12"
-license = {text = "MIT"}
+license-files = ["LICENSE"]
+keywords = ["aws", "s3", "utilities"]
 classifiers = ['Programming Language :: Python :: 3', 'Operating System :: OS Independent']
 dependencies = [
     "aioboto3==14.3.0",
