--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,14 +4,14 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pyaws_s3"
-version = "1.0.3"
+version = "1.0.4"
 description = "A Python package for AWS S3 utilities"
 authors = [
     { name="Giuseppe Zileni", email="giuseppe.zileni@gmail.com" }
 ]
 readme = {file = "README.md", content-type = "text/markdown"}
 requires-python = ">=3.12"
-license-files = ["LICENSE"]
+license-files = ["LICENSE.md"]
 keywords = ["aws", "s3", "utilities"]
 classifiers = ['Programming Language :: Python :: 3', 'Operating System :: OS Independent']
 dependencies = [
@@ -52,3 +52,6 @@ dependencies = [
     "wrapt==1.17.2",
     "yarl==1.20.0"
 ]
+
+[tool.setuptools]
+packages = ["pyaws_s3"]  # oppure usa "find:" se hai una struttura standard
