--- a/requirements.txt
+++ b/requirements.txt
@@ -8,12 +8,15 @@ aiosignal==1.3.2
 attrs==25.3.0
 boto3==1.37.3
 botocore==1.37.3
+build==1.2.2.post1
+chardet==5.2.0
 contourpy==1.3.2
 cycler==0.12.1
 fonttools==4.58.0
 fpdf==1.7.2
 frozenlist==1.6.0
 idna==3.10
+iniconfig==2.1.0
 jmespath==1.0.1
 kiwisolver==1.4.8
 matplotlib==3.10.3
@@ -24,11 +27,16 @@ packaging==23.2
 pandas==2.2.3
 pillow==11.2.1
 plotly==6.1.0
+pluggy==1.6.0
 propcache==0.3.1
 pyparsing==3.2.3
+pyproject_hooks==1.2.0
+pytest==8.3.5
 python-dateutil==2.9.0.post0
 pytz==2025.2
+reportlab==4.4.1
 s3transfer==0.11.3
+setuptools==80.7.1
 six==1.17.0
 tzdata==2025.2
 urllib3==2.4.0
