--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pyaws_s3"
-version = "1.0.13"
+version = "1.0.14"
 description = "A Python package for AWS S3 utilities"
 authors = [
     { name="Giuseppe Zileni", email="giuseppe.zileni@gmail.com" }
@@ -39,7 +39,7 @@ dependencies = [
     "matplotlib==3.10.3",
     "multidict==6.4.3",
     "narwhals==1.39.1",
-    "numpy==2.2.5",
+    "numpy>=1.22.0",
     "packaging>=23.2",
     "pandas==2.2.3",
     "pillow==11.2.1",
