--- a/requirements.txt
+++ b/requirements.txt
@@ -5,39 +5,106 @@ aiohappyeyeballs==2.6.1
 aiohttp==3.11.18
 aioitertools==0.12.0
 aiosignal==1.3.2
+anyio==4.9.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
 attrs==25.3.0
+beautifulsoup4==4.13.4
 boto3==1.37.3
 botocore==1.37.3
 build==1.2.2.post1
+certifi==2025.4.26
+cffi==1.17.1
+Chameleon==4.6.0
 chardet==5.2.0
+charset-normalizer==3.4.2
+check-manifest==0.50
+cmarkgfm==2024.11.20
 contourpy==1.3.2
 cycler==0.12.1
+defusedxml==0.7.1
+devpi==2.2.0
+devpi-client==7.2.0
+devpi-common==4.1.0
+devpi-server==6.15.0
+devpi-web==4.3.0
+docutils==0.21.2
 fonttools==4.58.0
 fpdf==1.7.2
 frozenlist==1.6.0
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+hupper==1.12.1
+id==1.5.0
 idna==3.10
 iniconfig==2.1.0
+itsdangerous==2.2.0
+jaraco.classes==3.4.0
+jaraco.context==6.0.1
+jaraco.functools==4.1.0
 jmespath==1.0.1
+keyring==25.6.0
 kiwisolver==1.4.8
+lazy==1.6
+markdown-it-py==3.0.0
 matplotlib==3.10.3
+mdurl==0.1.2
+more-itertools==10.7.0
 multidict==6.4.3
 narwhals==1.39.1
-packaging>=23.2
+nh3==0.2.21
+numpy==1.26.4
+packaging==24.2
+packaging-legacy==23.0.post0
 pandas==2.2.3
+passlib==1.7.4
+PasteDeploy==3.1.0
 pillow==11.2.1
+pkginfo==1.12.1.2
+plaster==1.1.2
+plaster-pastedeploy==1.0.1
+platformdirs==4.3.8
 plotly==6.1.0
 pluggy==1.6.0
 propcache==0.3.1
+py==1.11.0
+pycparser==2.22
+Pygments==2.19.1
 pyparsing==3.2.3
 pyproject_hooks==1.2.0
+pyramid==2.0.2
+pyramid_chameleon==0.3
 pytest==8.3.5
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
 pytz==2025.2
+readme_renderer==44.0
 reportlab==4.4.1
+repoze.lru==0.7
+requests==2.32.3
+requests-toolbelt==1.0.0
+rfc3986==2.0.0
+rich==14.0.0
+ruamel.yaml==0.18.10
+ruamel.yaml.clib==0.2.12
 s3transfer==0.11.3
 setuptools==80.7.1
 six==1.17.0
+sniffio==1.3.1
+soupsieve==2.7
+strictyaml==1.7.3
+translationstring==1.4
+twine==6.1.0
+typing_extensions==4.13.2
 tzdata==2025.2
 urllib3==2.4.0
+venusian==3.1.1
+waitress==3.0.2
+WebOb==1.8.9
+wheel==0.45.1
+Whoosh==2.7.4
 wrapt==1.17.2
 yarl==1.20.0
+zope.deprecation==5.1
+zope.interface==7.2
